--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">This is List of Products</h1>
+    <h1 class="display-4">This is List of Products from GithHub</h1>
     <table class="table table-bordered">
         <thead>
             <tr>
